import java.security.MessageDigest

apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-android-extensions'
apply plugin: 'kotlin-kapt'

tasks.withType( JavaCompile ).configureEach {
    options.forkOptions.jvmArgs.addAll( ["--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
                                         "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
                                         "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
                                         "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
                                         "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
                                         "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
                                         "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
                                         "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
                                         "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
                                         "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"] )
}

android {
    compileSdkVersion 30
    buildToolsVersion '30.0.2'
    defaultConfig {
        applicationId "com.ujs.salarymanagementsystem"
        minSdkVersion 21
        targetSdkVersion 29
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    //启用DataBinding
    dataBinding {
        enabled = true
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'com.android.support.test:runner:1.0.2'
    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
    //QMUI
    implementation 'com.qmuiteam:qmui:2.0.0-alpha10'
    def qmui_arch_version = '2.0.0-alpha10'
    implementation "com.qmuiteam:arch:$qmui_arch_version"
    kapt "com.qmuiteam:arch-compiler:$qmui_arch_version" // use annotationProcessor if java
    //图表库MPAndroidChart
    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
    //轮播图库
    implementation 'com.youth.banner:banner:1.4.10'
    //ButterKnife
    implementation 'com.jakewharton:butterknife:10.0.0'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
}

dependencies {
    implementation 'com.yinglan.scrolllayout:scrolllayout:1.0.2'
    implementation 'com.google.code.gson:gson:2.8.5'
    implementation 'com.github.bumptech.glide:glide:4.8.0'
    implementation 'com.yanzhenjie:permission:2.0.0-rc12'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
    testImplementation 'junit:junit:4.12'
}

configurations.all {
    resolutionStrategy {
        force 'androidx.core:core:1.6.0' force 'androidx.core:core-ktx:1.6.0'
    }
}

dependencies {

    implementation files('libs\\mysql-connector-java-5.1.46-bin.jar')
    implementation 'com.google.android.material:material:1.4.0'
    implementation 'androidx.annotation:annotation:1.2.0'
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
    implementation 'androidx.appcompat:appcompat:1.3.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'

    implementation 'com.kevin:basedialog:1.0.2'
    implementation 'com.github.yalantis:ucrop:2.2.2'
}